<resources>
    <string name="app_name">BD - EulisesRdz</string>
    <string name="action_settings">Settings</string>
    <string name="id_A">Id Estudiante</string>
    <string name="nombre">Nombre</string>
    <string name="apellidop">Apellido Paterno</string>
    <string name="apellidom">Apellido Materno</string>
    <string name="email">Correo</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Edad</string>

    <string name="alta">Registrar</string>
    <string name="baja">Eliminar</string>
    <string name="consulta">Consultar</string>
    <string name="modificar">Modificar</string>
    <string name="limpiar">Limpiar</string>
    <string name="registro">Registros</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_card">Card</string>
    <string name="title_activity_students">students</string>
</resources>
