<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    tools:context=".principal"
    android:background="#ECEFF1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/id_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_A"
            android:inputType="phone"
            android:digits="1234567890"/>

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre" />

        <TextView
            android:text="@string/apellidop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidop" />

        <TextView
            android:text="@string/apellidom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidom" />

        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email" />

        <TextView
            android:text="@string/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:id="@+id/telefono"
            android:inputType="phone"
            android:digits="1234567890"/>

        <TextView
            android:text="@string/edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:id="@+id/edad"
            android:inputType="phone"
            android:digits="1234567890"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:text="@string/alta"
                android:id="@+id/btn_alta"
                android:onClick="registrar"
                android:layout_weight="1"
                android:background="#78909C"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/consulta"
                android:id="@+id/btn_consultar"
                android:onClick="consulta"
                android:layout_weight="1"
                android:background="#78909C"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:text="@string/baja"
                android:id="@+id/btn_baja"
                android:onClick="baja"
                android:layout_weight="1"
                android:background="#78909C"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/modificar"
                android:id="@+id/btn_modificar"
                android:onClick="modificacion"
                android:layout_weight="1"
                android:background="#78909C"
                android:textColor="#FFFFFF" />
        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content">

            <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:id="@+id/btn_limpiar"
            android:onClick="limpia"
            android:layout_weight="1"
                android:layout_marginRight="5dp"
            android:background="#78909C"
            android:textColor="#FFFFFF" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:id="@+id/btn_consulta"
                android:onClick="buscar"
                android:layout_weight="1"
                android:background="#78909C"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>